<resources>
    <string name="app_name">L Catalog</string>

    <string name="action_settings">Settings</string>
    <string name="create_account">Create Account</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot password</string>
    <string name="re_enter_password">Re-enter Password</string>
    <string name="login_trigger">Already a member? Login</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="email">Email</string>
    <string name="address">Address</string>
    <string name="name">Name</string>
    <string name="signup_trigger">No account yet? Create one</string>
    <string name="l_catalog">L-Catalog</string>
    <string name="powered_lucidleanlabs">Powered by Immersion Software Labs.</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_settings">Preferences</string>
    <string name="enter_as_guest">Enter as Guest</string>
    <string name="signup_chance">You Still can Signup, Click here</string>
    <string name="return_to_login">Return back to the login Screen</string>

    <!--Strings related to Price and Discount-->

    <string name="price">Price</string>
    <string name="discount">Discount</string>

    <string name="switch_view">Switch view</string>
    <string name="title_activity_catalog">Catalog</string>
    <string name="title_activity_gallery">Gallery</string>
    <string name="start">START</string>
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>

    <string name="play_again_desc"><![CDATA[To see the welcome slider again, goto Settings -> apps -> welcome slider -> clear data]]></string>
    <string name="play_again">play_again</string>
    <string name="_3d_description">This feature lets you rotate the object in and around, to get a clear picture what you are exactly buying</string>
    <string name="_3d_text">360&#xb0; Object Rotation</string>
    <string name="_augment_desc">Augment will let you see the object chosen by you augmented into the real world.</string>
    <string name="_augment_text">AUGMENT</string>
    <string name="title_activity_aboutus">About Us</string>
    <string name="slide3_desc">This feature lets you capture the surrounds after the objects are augmented. Also lets you share between the close ones.</string>
    <string name="title_activity_vendor_registration">Vendor Registration Form</string>

    <!--Strings related to New Vendor Registration Page-->

    <string name="new_vendor_name">Name of your Company</string>
    <string name="new_vendor_address">Company Address</string>
    <string name="new_vendor_email">Company Email</string>
    <string name="new_vendor_ph_no">Mobile Number</string>
    <string name="new_vendor_alt_ph_no">Alternative Mobile Number</string>
    <string name="new_vendor_submit">SUBMIT / REGISTER</string>
    <string name="new_vendor_contact_person">Person to be Contacted</string>
    <string name="new_vendor_no_of_models_req">No of Models/Designs required (Approx)</string>
    <string name="new_vendor_state">Which State in India?</string>
    <string name="new_vendor_pincode">What is the States PinCode?</string>
    <string name="new_vendor_location">Which City?</string>
    <string name="dummy_address">Chandra Layout, Bangalore- 560072</string>
    <string name="Logged_userName">UserName</string>
    <string name="close">Close</string>
    <string name="New_password">New Password</string>
    <string name="ReEnter_new_password">Re Enter New Password</string>
    <string name="title_activity_user_profile">User Profile</string>

    <!--Strings related to About us page-->

    <string name="data">
        "In this section, we provide a general description of the product, its purpose and"
        "functionality.We also explain how this product fits into the overall corporate product"
        "strategy. We will try to add the architecture diagram for some specific needs.\n\n"

        "L – Catalogue is a digital catalogue that helps the furniture manufacturers"
        "/vendors/interior designers to showcase the furniture in a much-enhanced way"
        "by generating a pattern for each individual product/article. The customers/users"
        "then can take the pattern home and try the product/article in an augmented way"
        "using the company specific android application available in the android app store."
        "By this way, the user/customer gets the clear picture of whether the article/product"
        "fits as per his/her specifications in real world. L – Catalogue is an android"
        "application that constitute of 100 3D furniture models ~50 regular (mono fabric)"
        "designs. ~50 designs which had multiple fabrics. Each 3D furniture model is bound"
        "with a unique pattern. Each pattern will be provided with a set of instructions"
        "Like at what height the patter should be pasted on the wall from the surface."
        "A camera screen that can recognize these patterns and augment into the real world"
        "This screen can recognize multiple patterns lessthan 10 i.e., it can augment 10 3D"
        "models on to the real world. Theses 3D objects are intractable as in Single Click"
        "displays the accurate dimensions of the object. Double click lets the user choose"
        "the fabrics, if exist. Long press opens the feedback message opens right below the"
        "object. The feedback screen lets the user to send a personal message to the vendor/"
        "manufacturer if he/she needs a customization to the existing furniture object. Once"
        "submitted, the message will be tagged with the object ID as well as the User contact"
        "details, in case provided (One means is mandatory). Once the user scans the articles,"
        "the user will be able to take a screenshot of the screen in the image format which"
        "lets the user to share the image between multiple apps which is a native feature. The"
        "tricky part is to take a screen shot as if the furniture exists in the real * There"
        "will be a home button which shows the list of screenshots that were taken earlier "
        "using the L – Catalog app."
    </string>

    <string name="Catalogue">
        "The goal of this product is to provide the opportunity to all the furniture vendors"
        "to deliver the customers the feel of having the furniture right in front of him/her"
        "without bringing the actual furniture home. This could bring down the availability"
        "cost at the store, manufacturing cost of the larger units drastically increases the"
        "customer -vendor interaction in a much-sophisticated way. Along with all these, think"
        "about the situation where the user takes the furniture home and feels the article doesn’t"
        "fit as he felt at the showroom and he/she as in the customer thinks of returning the"
        "product, L-Catalogue will eradicate this problem and the huge transportation cost that"
        "is involved in this process."
    </string>
    <string name="objectives">
        "This product helps you reduce the transport cost, if managed, the manufacturing cost as"
        "well as the availability of the product in the store cost.\n\n"

        "This product helps you in the advertisement portal as in when the product is sent for"
        "advertising, the article will be advertised/displayed over the newspaper or on a local"
        "magazine or on a digital media, the vendor/manufacturer has the freedom to provide the"
        "pattern wherever possible, which helps users/customers to try the product the moment"
        "they see the product on the advertisement portal.\n\n"

        "This product will let the vendor/manufacturer to have his own android mobile application"
        "in the android app store, which will let him have more exposure to the rest of the country"
        "as well as the world if possible and the greatest exposure to the market. This android app"
        "will have the capability of augmenting the furniture into the real world physically, as in"
        "when the user/customer places the pattern at the right place as per the instructions. This"
        "product also lets the users/customers to reach out to the vendor/manufacturer instantly"
        "using a feedback form for each article provided in the catalogue if he/she needs a customized"
        "furniture. The vendor will be able to choose this option while product development depending"
        "upon his/hers selling forte is static designer products or customized manufacturing."
    </string>

    <string name="Definition">
        "The L – Catalog is an Augmented reality (AR) catalogue which helps the furniture"
        "manufacturers/vendors to deliver the user/customer the furniture portability in the form of a"
        "pattern printed on a paper. Each manufacturer/vendor will be having an android application of"
        "his own in the android play store, which lets the user/ customer when installed this app on"
        "his/her android phone to scan the pattern provided by the manufacturer/vendor sticking it on"
        "the walls as per the instructions provided behind the pattern.\n\n"

        "For example, the instructions behind says 2ft above the surface/floor where you exactly"
        "want the furniture (if it is 4ft tall) to place inside your house. This process lets the"
        "user/customer to get the feel of the furniture, without placing the furniture at the"
        "required place physically."
    </string>
    <string name="activity_product_page">Product Page</string>
    <string name="title_activity_notify">Notifications</string>
    <string name="scale">Scale</string>
    <string name="title_activity_article_3dView">3DView</string>
    <string name="title_overview_activity">Overview</string>
    <string name="note_download">NOTE : Please click the download button before you click the 3d view, as it is already been disabled until you download</string>

</resources>
