<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinatorLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ForgotPasswordActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background"
        android:fitsSystemWindows="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingLeft="12dp"
            android:paddingRight="12dp"
            android:paddingTop="30dp">

            <ImageView
                android:id="@+id/icon"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_gravity="center_horizontal"
                android:contentDescription="@string/app_name"
                android:src="@drawable/logo" />

            <TextView
                android:id="@+id/application_name"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:gravity="center"
                android:text="@string/l_catalog"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/lucidleanlabs"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:gravity="center"
                android:text="@string/powered_lucidleanlabs"
                android:textSize="16sp"
                android:textStyle="bold" />

            <!--forgot password label-->
            <android.support.design.widget.TextInputLayout
                android:id="@+id/area_input_forgot_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/custom_margin"
                android:visibility="visible">

                <EditText
                    android:id="@+id/input_forgot_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress" />
            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:id="@+id/area_reset_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/custom_margin"
                android:visibility="visible">

                <EditText
                    android:id="@+id/input_New_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/New_password"
                    android:inputType="textPassword" />
            </android.support.design.widget.TextInputLayout>

            <!--ReEnter  password label-->

            <android.support.design.widget.TextInputLayout
                android:id="@+id/area_reEnter_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/custom_margin"
                android:visibility="visible">

                <EditText
                    android:id="@+id/input_reEnter_New_Password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/ReEnter_new_password"
                    android:inputType="textPassword" />

            </android.support.design.widget.TextInputLayout>

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/btn_submit"
                android:layout_width="250dp"
                android:layout_height="40dp"
                android:layout_marginTop="@dimen/custom_margin"
                android:padding="10dp"
                android:text="Submit" />

            <TextView
                android:id="@+id/link_forgot_signup"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/thumbnail"
                android:layout_marginTop="@dimen/custom_margin"
                android:gravity="center"
                android:text="@string/signup_trigger"
                android:textSize="20sp" />


            <TextView
                android:id="@+id/link_forgot_login"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/activity_horizontal_margin"
                android:gravity="center"
                android:text="@string/login_trigger"
                android:textSize="20sp" />


        </LinearLayout>
    </ScrollView>
</android.support.design.widget.CoordinatorLayout>